fix alignment

--- a/Styles/register_page.css
+++ b/Styles/register_page.css
@@ -63,7 +63,7 @@
 .form_box{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     /* border: 1px solid red; */
 }
 
@@ -104,6 +104,9 @@
     padding: 0;
     padding-top: 10px;
     padding-left: 5px;
+    max-width: 250px;      
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
     /* border: 1px solid blue; */
 }
 
